# mocness_field_sheets

./: .env.example  README.md  extract-mocness.py  extract-mocness.ts  extract_mocness.py  main.py  pyproject.toml
prompts/: extract.json
